refactor: ✂️递归获取菜单、部门属性列表代码重构优化